<resources>
    <string name="app_name">horof</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    //Formal Strings
    <string name="consonant">Consonant</string>
    <string name="vowel">Vowel</string>
    <string name="company">Tenter Software</string>
    <string name="email">tenter@gmail.com</string>

    //Page String
    <string name="alphabet">Alphabets</string>
    <string name="nada">Nada</string>
    <string name="fola">Fola</string>
    <string name="matra">Matra</string>
    <string name="number">Number</string>
    <string name="keyboard">Keyboard</string>
    <string name="what">All Chakma Alphabets are called Horof in a collective.</string>

    //Nav Strings
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="communicate">Communicate</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>

    //All Vowels - 7
    <string name="soreo">Ao</string>
    <string name="sorea">Ah</string>
    <string name="rossoe">Ee</string>
    <string name="rossou">Uh</string>
    <string name="ae">Ae</string>
    <string name="oh">Oh</string>
    <string name="oi">Oi</string>

    //All Consonants - 32
    <string name="ka">Chuscengya-Ka</string>
    <string name="kha">Guzongya-Kha</string>
    <string name="ga">Chandya-Ga</string>
    <string name="gha">Tin-Dhelya-Gha</string>
    <string name="umo">Cilamo-Nga</string>
    <string name="ca">Di-Dhely-Ca</string>
    <string name="cha">Mojora-Cha</string>
    <string name="ja">Di-Fodola-Ja</string>
    <string name="jha">Urho-Urhi-Jha</string>
    <string name="niyo">Cilocya-Gna</string>
    <string name="takarta">Diyadat-Ta</string>
    <string name="thakurta">Fudo-Diyat-Tha</string>
    <string name="dalimda">Adu_Vanga-Da</string>
    <string name="dhakada">Lej_Vorat-Dha</string>
    <string name="modonno">Pedtua-Na</string>
    <string name="taluta">Gongodat-Ta</string>
    <string name="tholeto">Jogodat-Tha</string>
    <string name="dadada">Dolonit-Da</string>
    <string name="dhanda">Tol-Muat-Dha</string>
    <string name="dontono">Far-Banya-Na</string>
    <string name="pa">Palya-Pa</string>
    <string name="pha">Ubor-Fodola-Fa</string>
    <string name="ba">Ubor-Muo-Ba</string>
    <string name="bha">Cer-Dhelya-Va</string>
    <string name="ma">Bugot-Fodola-Ma</string>
    <string name="antoja">Zilya-Za</string>
    <string name="ra">Di-Darjya-Ra</string>
    <string name="la">Tol-Muo-La</string>
    <string name="oya">Bajonya-Wa</string>
    <string name="ha">Ubor-Muo-Ha</string>
    <string name="dontoso">Vudi-Vughya-Sa</string>
    <string name="biyeya">Cimujya-Ya</string>

    //Nada Sinno
    <string name="plus">Ubor-Muo-Ha</string>
    <string name="minus">Ubor-Muo-Ha</string>
    <string name="into">Ubor-Muo-Ha</string>
    <string name="division">Ubor-Muo-Ha</string>
    <string name="equal">Ubor-Muo-Ha</string>
    <string name="ratio">Ubor-Muo-Ha</string>
    <string name="greater">Ubor-Muo-Ha</string>
    <string name="less">Ubor-Muo-Ha</string>
    <string name="because">Ubor-Muo-Ha</string>
    <string name="so">Ubor-Muo-Ha</string>
    <string name="bracket1">Ubor-Muo-Ha</string>
    <string name="bracket2">Ubor-Muo-Ha</string>
    <string name="bracket3">Ubor-Muo-Ha</string>

    //Numbers
    <string name="zero">Zero</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>

    //Matra Sinno
    <string name="ubor">Ubor Tulle</string>
    <string name="majje">Majye</string>
    <string name="aekar">Ae-Kar</string>
    <string name="banne">Banne</string>
    <string name="banifudo">Banifudo</string>
    <string name="ektan">Ektan</string>
    <string name="ditan">Ditan</string>
    <string name="ohkar">Oh-Kar</string>
    <string name="oikar">Oi-Kar</string>
    <string name="delvanga">Delvanga</string>
    <string name="ekfudo">Ekfudo</string>
    <string name="difudo">Difudo</string>
    <string name="chanfudo">Chanfudo</string>


</resources>
