<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    android:paddingVertical="10dp"
    android:background="#C8F1EBEB"
    tools:context=".ui.home.HomeFragment">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginHorizontal="60dp"
                android:text="@string/what"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </RelativeLayout>

        <GridLayout
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:columnCount="2"
            android:rowCount="3"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="10dp"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/alphabet"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="15dp"
                app:cardCornerRadius="8dp"
                android:focusable="true">
                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:src="@drawable/a"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="2dp"
                        android:background="#000" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/alphabet"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/nada"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="15dp"
                app:cardCornerRadius="8dp"
                android:focusable="true">
                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:src="@drawable/add"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="2dp"
                        android:background="#000" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nada"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/matra"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="15dp"
                app:cardCornerRadius="8dp"
                android:focusable="true">
                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:src="@drawable/ohkar"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="2dp"
                        android:background="#000" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/matra"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/fola"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="15dp"
                app:cardCornerRadius="8dp"
                android:focusable="true">
                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:src="@drawable/yafola"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="2dp"
                        android:background="#000" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fola"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/number"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="15dp"
                app:cardCornerRadius="8dp"
                android:focusable="true">
                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:src="@drawable/one"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="2dp"
                        android:background="#000" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/keyboard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="15dp"
                app:cardCornerRadius="8dp"
                android:focusable="true">
                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:src="@drawable/k"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="2dp"
                        android:background="#000" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/keyboard"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
</LinearLayout>